# ds_projects

./: .gitignore  README.md
1_employee_salary_analysis-kaggle_salary/notebook/: salary_analysis.ipynb
1_ml-pipeline-migration-bigquery/: .env  README.md  requirements.txt
1_ml-pipeline-migration-bigquery/docs/: implementation_plan.md  portfolio_guide.md
1_ml-pipeline-migration-bigquery/notebooks/: bq_analysis.ipynb  eda_etl.ipynb
1_ml-pipeline-migration-bigquery/src/: bq_flush.py  bq_ingestion.py  bq_pipeline.py  run_sql_dry_run.py  utils_bq.py
2_ab-test-ecommerce-optimization/: README.md
2_titanic_machine_learning-kaggle_titanic/submission/: submission_knn.csv
3_employee-salary-eda-clustering/: README.md
4_gold-recovery-industrial-optimization/: README.md
5_a-b_test/notebook/: a-b_test.ipynb
5_time-series-taxi-demand-forecasting/: README.md
5_time-series-taxi-demand-forecasting/notebook/: time_series_analysis.ipynb
6_cluster_retail-uci/notebook/: cluster_retail.ipynb
6_ds_study-case/: kedro_config.yml
6_ds_study-case/cerveceria/: .gitignore  README.md  pyproject.toml
6_ds_study-case/cerveceria/conf/base/: catalog.yml
6_ds_study-case/cerveceria/src/cerveceria/: __init__.py  __main__.py  pipeline_registry.py  settings.py
6_ds_study-case/cerveceria/src/cerveceria/pipelines/: data_entry_validation.py  data_ingestion.py  nodes.py  sheet_data_validation.py
6_ds_study-case/cerveceria/src/cerveceria/pipelines/data_ingestion/: nodes.py  pipeline.py
kaggle_titanic/titanic/: titanic.ipynb
tripleten-gold recovery/: gold_recovery_notebook.ipynb
(+10 files in other folders)
